--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,17 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "proxy": "http://api:5000",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.20.47",
-    "@types/react": "^16.14.24",
-    "@types/react-dom": "^16.9.14",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.41",
+    "@types/react-dom": "^17.0.14",
     "@types/react-redux": "^7.1.23",
     "axios": "^0.26.1",
     "react": "^17.0.2",
@@ -20,7 +21,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
-    "typescript": "~4.1.5"
+    "typescript": "~4.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
