--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_PATH=./dist node dist/index.js",
+    "start": " node dist/index.js",
     "build": "tsc",
+    "tsc": "tsc",
     "client": "npm start --prefix frontend",
     "dev": "cross-env NODE_ENV=development nodemon -L backend/index.ts",
-    "test": "cross-env NODE_ENV=test jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
+    "test": "cross-env NODE_ENV=test jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1",
+    "heroku-postbuild": "npm run tsc && NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
